test/types/string/assignToChar/testCArray.4.good
Helpers.chpl:39: In function 'testCArrayVal':
Helpers.chpl:42: error: Cannot assign to int(8) from string
  testCArray.chpl:12: called as testCArrayVal(strBytes: string, type toType = int(8))
